--- a/css/main/movie.css
+++ b/css/main/movie.css
@@ -19,6 +19,12 @@
   font-weight: bold;
 }
 
+.movie-title {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 #top-rated-movies-wrap {
   width: fit-content;
   display: flex;
