--- a/css/search/search.css
+++ b/css/search/search.css
@@ -69,6 +69,8 @@ main {
 }
 
 .movie-content-wrap > h4 {
+  overflow: hidden;
+  text-overflow: ellipsis;
   white-space: nowrap;
   width: 200px;
   font-size: var(--font-lg);
